--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -141,6 +141,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 131.72.79.38;
+allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -248,6 +249,7 @@ allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
+allow 178.175.135.137;
 allow 178.175.137.223;
 allow 178.175.148.209;
 allow 178.175.148.246;
@@ -663,6 +665,7 @@ allow 195.47.238.90;
 allow 195.47.238.91;
 allow 195.47.238.92;
 allow 195.47.238.93;
+allow 195.66.214.161;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
@@ -705,6 +708,7 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
+allow 2001:41d0:701:1100::57d3;
 allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
@@ -1158,7 +1162,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1572,7 +1575,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1599,6 +1601,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1696,6 +1699,7 @@ allow 45.88.186.92;
 allow 45.91.250.107;
 allow 45.9.148.50;
 allow 45.9.156.101;
+allow 45.9.168.192;
 allow 45.9.168.43;
 allow 45.94.31.68;
 allow 45.95.169.102;
@@ -1709,6 +1713,7 @@ allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.246.92.35;
+allow 46.246.92.37;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.38.243.210;
@@ -1723,7 +1728,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
