--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -193,7 +193,6 @@ allow 164.132.172.209;
 allow 164.132.58.8;
 allow 165.73.242.163;
 allow 166.70.207.2;
-allow 167.249.30.245;
 allow 171.25.193.131;
 allow 171.25.193.20;
 allow 171.25.193.234;
@@ -679,6 +678,7 @@ allow 198.46.166.157;
 allow 198.50.212.160;
 allow 198.58.107.53;
 allow 198.96.155.3;
+allow 198.98.48.33;
 allow 198.98.50.199;
 allow 198.98.51.189;
 allow 198.98.51.249;
@@ -949,6 +949,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
+allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2e5::104;
@@ -976,6 +977,7 @@ allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:253:2085:7b82:89a7:2145;
+allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
 allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
@@ -1174,6 +1176,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1820,6 +1823,7 @@ allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
