--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -248,7 +248,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.63.98.250;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -519,6 +518,7 @@ allow 185.67.82.114;
 allow 185.82.219.109;
 allow 188.214.104.21;
 allow 188.239.191.25;
+allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
@@ -1071,7 +1071,6 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
-allow 2a01:4f8:121:4484::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1088,6 +1087,7 @@ allow 2a02:c204:2261:2270::1;
 allow 2a02:c204:2263:5153::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
+allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 allow 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
@@ -1676,7 +1676,6 @@ allow 5.79.66.19;
 allow 5.8.18.30;
 allow 62.133.45.2;
 allow 62.171.137.169;
-allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.113.221;
 allow 64.190.76.2;
