--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -248,7 +248,6 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.63.98.250;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -519,6 +518,7 @@ deny 185.67.82.114;
 deny 185.82.219.109;
 deny 188.214.104.21;
 deny 188.239.191.25;
+deny 188.68.36.28;
 deny 188.68.41.191;
 deny 188.68.49.235;
 deny 188.68.52.231;
@@ -1071,7 +1071,6 @@ deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
-deny 2a01:4f8:121:4484::2;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1088,6 +1087,7 @@ deny 2a02:c204:2261:2270::1;
 deny 2a02:c204:2263:5153::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
+deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
 deny 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 deny 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
@@ -1676,7 +1676,6 @@ deny 5.79.66.19;
 deny 5.8.18.30;
 deny 62.133.45.2;
 deny 62.171.137.169;
-deny 62.182.84.146;
 deny 62.72.47.105;
 deny 64.190.113.221;
 deny 64.190.76.2;
