--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -285,7 +285,6 @@ deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
-deny 2a01:4f8:121:4484::2;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -302,6 +301,7 @@ deny 2a02:c204:2261:2270::1;
 deny 2a02:c204:2263:5153::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
+deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
 deny 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 deny 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
