--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -94,7 +94,6 @@ allow 107.189.7.141;
 allow 107.189.7.144;
 allow 107.189.7.168;
 allow 107.189.8.133;
-allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.56;
 allow 107.189.8.65;
@@ -981,7 +980,6 @@ allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f3d3:7c3:507c:6f32:c132;
 allow 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
-allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
@@ -1129,6 +1127,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1492,7 +1491,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1519,6 +1517,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1636,6 +1635,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
