--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -344,7 +344,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -474,6 +473,7 @@ allow 2a0b:f4c2::17;
 allow 2a0b:f4c2::18;
 allow 2a0b:f4c2::19;
 allow 2a0b:f4c2::2;
+allow 2a0b:f4c2::20;
 allow 2a0b:f4c2::21;
 allow 2a0b:f4c2::22;
 allow 2a0b:f4c2::23;
