--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -157,6 +157,7 @@ deny 146.19.143.181;
 deny 146.19.143.225;
 deny 146.19.143.54;
 deny 146.19.143.92;
+deny 146.19.254.163;
 deny 146.19.254.165;
 deny 146.59.126.232;
 deny 146.59.231.4;
@@ -426,6 +427,7 @@ deny 185.220.101.19;
 deny 185.220.101.190;
 deny 185.220.101.191;
 deny 185.220.101.2;
+deny 185.220.101.20;
 deny 185.220.101.21;
 deny 185.220.101.22;
 deny 185.220.101.23;
@@ -1163,7 +1165,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1293,6 +1294,7 @@ deny 2a0b:f4c2::17;
 deny 2a0b:f4c2::18;
 deny 2a0b:f4c2::19;
 deny 2a0b:f4c2::2;
+deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
@@ -1703,9 +1705,11 @@ deny 45.95.169.109;
 deny 45.95.169.110;
 deny 45.95.169.252;
 deny 46.165.243.36;
+deny 46.183.216.212;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
+deny 46.246.92.35;
 deny 46.246.92.37;
 deny 46.250.243.29;
 deny 46.253.4.208;
@@ -1721,7 +1725,6 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
