--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -344,7 +344,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -474,6 +473,7 @@ deny 2a0b:f4c2::17;
 deny 2a0b:f4c2::18;
 deny 2a0b:f4c2::19;
 deny 2a0b:f4c2::2;
+deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
