--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -157,6 +157,7 @@ set_real_ip_from 146.19.143.181;
 set_real_ip_from 146.19.143.225;
 set_real_ip_from 146.19.143.54;
 set_real_ip_from 146.19.143.92;
+set_real_ip_from 146.19.254.163;
 set_real_ip_from 146.19.254.165;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
@@ -426,6 +427,7 @@ set_real_ip_from 185.220.101.19;
 set_real_ip_from 185.220.101.190;
 set_real_ip_from 185.220.101.191;
 set_real_ip_from 185.220.101.2;
+set_real_ip_from 185.220.101.20;
 set_real_ip_from 185.220.101.21;
 set_real_ip_from 185.220.101.22;
 set_real_ip_from 185.220.101.23;
@@ -1163,7 +1165,6 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1293,6 +1294,7 @@ set_real_ip_from 2a0b:f4c2::17;
 set_real_ip_from 2a0b:f4c2::18;
 set_real_ip_from 2a0b:f4c2::19;
 set_real_ip_from 2a0b:f4c2::2;
+set_real_ip_from 2a0b:f4c2::20;
 set_real_ip_from 2a0b:f4c2::21;
 set_real_ip_from 2a0b:f4c2::22;
 set_real_ip_from 2a0b:f4c2::23;
@@ -1703,9 +1705,11 @@ set_real_ip_from 45.95.169.109;
 set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.183.216.212;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
+set_real_ip_from 46.246.92.35;
 set_real_ip_from 46.246.92.37;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.253.4.208;
@@ -1721,7 +1725,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
