--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -905,6 +905,7 @@ allow 45.141.215.97;
 allow 45.143.200.32;
 allow 45.145.93.133;
 allow 45.148.10.111;
+allow 45.154.98.33;
 allow 45.38.20.153;
 allow 45.66.35.10;
 allow 45.66.35.20;
