--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -905,6 +905,7 @@ set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.143.200.32;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
+set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.153;
 set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
